fix(packages/app): tab and prompt UI refinements
Fixes #1878

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -63,7 +63,7 @@
             <i class='repl-prompt-right-element-icon deemphasize new-tab-button'>&#xFF0B;</i>
           </div>
           <div class='left-tab-stripe-button smaller-button' id='help-button'>
-            <i class='fas fa-question-circle'></i>
+            <i class='fas fa-question'></i>
           </div>
         </div>
       </div>
