--- a/plugins/plugin-editor/web/css/editor.css
+++ b/plugins/plugin-editor/web/css/editor.css
@@ -142,3 +142,8 @@ tab.sidecar-full-screen #sidecar .wskflow-container.visible {
     bottom: -1em;
     color: var(--color-support-01);
 }
+
+body[kui-theme-style] .monaco-editor .selected-text {
+    transition: background 300ms ease-in-out;
+    background: var(--color-selection-background);
+}
