--- a/packages/app/web/css/top-tab-stripe.css
+++ b/packages/app/web/css/top-tab-stripe.css
@@ -30,12 +30,10 @@ body.subwindow:not(.sidecar-is-minimized) .left-tab-stripe {
     display: none;
 }
 .left-tab-stripe {
-    flex-basis: 78px; /* this seems to align things well with macOS */
-    min-width: 0;
-    padding: 1.5em 0 0.5em;
-    background: var(--color-stripe-01);
     display: flex;
-    flex-direction: column;
+    flex-basis: 32px;
+    min-width: 0;
+    background: var(--color-stripe-01);
     transition: background-color 300ms ease-in-out;
 }
 
@@ -139,16 +137,13 @@ body[kui-theme-style="light"] .left-tab-stripe-buttons .left-tab-stripe-button i
     padding-right: 0.375rem;
 }
 .repl.sidecar-visible .repl-output {
-    padding-right: 0.375rem;
+    padding-right: 0.75rem;
 }
 
 #help-button.left-tab-stripe-button {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-#help-button.left-tab-stripe-button i {
-    color: var(--color-base0D) !important;
 }
 #help-button:hover {
     background-color: rgba(255,255,255,0.075);
@@ -160,13 +155,6 @@ body[kui-theme-style="light"] .left-tab-stripe-buttons .left-tab-stripe-button i
 
 .main {
     flex-direction: column;
-}
-
-.left-tab-stripe {
-    height: 32px;
-    flex-direction: row;
-    padding: 0;
-    flex-basis: auto;
 }
 
 .left-tab-stripe-buttons {
@@ -181,13 +169,13 @@ body[kui-theme-style="light"] .left-tab-stripe-buttons .left-tab-stripe-button i
     align-items: center;
     justify-content: center;
     background: var(--color-base02);
-    min-width: 12em;
+    min-width: 10em;
     margin: 0;
     border: 1px solid transparent;
     border-bottom: none;
-    border-top-left-radius: 1px;
-    border-top-right-radius: 1px;
-    transition: border 300ms ease-in-out;
+    border-top-left-radius: 1px 2px;
+    border-top-right-radius: 1px 2px;
+    transition: all 300ms ease-in-out;
 }
 
 .left-tab-stripe-button:not(.left-tab-stripe-button-selected) .left-tab-stripe-button-label {
@@ -209,9 +197,10 @@ body[kui-theme-style="dark"] .left-tab-stripe-button:not(.left-tab-stripe-button
 .left-tab-stripe-button-selected {
     background: var(--color-ui-01);
     border-color: var(--color-base03);
-    opacity: 0.975;
+    opacity: 0.95;
     border-bottom: 1px inset var(--color-ui-03);
     filter: opacity(0.975) grayscale(0.5) brightness(1.1);
+    margin-top: 1px;
 }
 body[kui-theme-style="light"] .left-tab-stripe-button-selected {
     border-bottom-color: var(--color-ui-04);
@@ -279,7 +268,7 @@ body[kui-theme-style="light"] .left-tab-stripe-button-selected {
     font-size: 1.25em;
 }
 .left-tab-stripe-button.smaller-button i.fas {
-    font-size: 0.875em;
+    font-size: 0.75em;
 }
 
 body {
