--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -290,9 +290,10 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
     border-left: 1px solid var(--color-ui-04);
     -webkit-font-smoothing: antialiased;
     filter: saturate(2) brightness(1.1);
+    --color-prompt: rgba(255,255,255,0.1);
 }
 body[kui-theme-style="light"] .repl-prompt {
-    filter: saturate(2) brightness(0.8);
+    --color-prompt: rgba(0,0,0,0.2);
 }
 .repl-prompt .repl-selection {
     font-size: 80%;
@@ -306,7 +307,7 @@ body[kui-theme-style="light"] .repl-prompt {
     transition: border-color 150ms ease-in-out;
 }
 .repl-block:not(.using-custom-prompt) .repl-prompt-righty {
-    border-color: transparent var(--color-ui-04);
+    border-color: transparent var(--color-prompt);
     border-style: solid;
     border-width: 0.55em 0px 0.55em 0.55em; /* 50% of  height: for repl-context */
     height: 0px;
@@ -317,7 +318,7 @@ body[kui-theme-style="light"] .repl-prompt {
     font-size: 0.6875em;
     font-weight: 500;
     color: var(--color-text-01);
-    background-color: var(--color-ui-04);
+    background-color: var(--color-prompt);
     border-left: 1px solid var(--color-ui-03);
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
@@ -753,9 +754,9 @@ sidecar.visible {
     transition-duration: 600ms; /* a bit slower coming out */
     border: 1px solid var(--color-ui-04);
     border-right: none;
-    border-radius: 3px / 6px;
-    height: calc(100% - 2ex);
-    margin-top: 1ex;
+    border-radius: 2px / 4px;
+    height: calc(100% - 0.75em);
+    margin-top: 0.375em;
     box-shadow: 0px 0px 1px var(--color-ui-04);
 }
 body:not(.subwindow) .sidecar-full-screen sidecar.visible:not(.minimized) {
