--- a/packages/app/web/css/carbon-overrides.css
+++ b/packages/app/web/css/carbon-overrides.css
@@ -1,3 +1,11 @@
+body[kui-theme-style] {
+    letter-spacing: unset;
+    text-rendering: unset;
+    -webkit-font-smoothing: unset;
+    user-select: none;
+    line-height: unset;
+}
+
 body[kui-theme-style] sidecar .bx--tabs__nav-item--selected:not(.bx--tabs__nav-item--disabled) .bx--tabs__nav-link {
     color: var(--color-text-01);
     border-bottom-color: var(--color-content-divider);
