--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -11,13 +11,9 @@ html, body, .page, .main, .repl, sidecar {
 }
 body {
     font-size: 1em;
-    letter-spacing: unset;
     font-weight: 400;
-    text-rendering: unset;
-    -webkit-font-smoothing: unset;
     margin: 0;
     overflow: hidden;
-    user-select: none;
 }
 .page {
     display: flex;
@@ -290,10 +286,12 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
     border-left: 1px solid var(--color-ui-04);
     -webkit-font-smoothing: antialiased;
     filter: saturate(2) brightness(1.1);
-    --color-prompt: rgba(255,255,255,0.1);
+    --color-prompt-text: var(--color-text-01);
+    --color-prompt-background: rgba(255,255,255,0.1);
 }
 body[kui-theme-style="light"] .repl-prompt {
-    --color-prompt: rgba(0,0,0,0.2);
+    --color-prompt-background: var(--color-base02);
+    filter: saturate(2) brightness(1.2) contrast(1.1);
 }
 .repl-prompt .repl-selection {
     font-size: 80%;
@@ -307,7 +305,7 @@ body[kui-theme-style="light"] .repl-prompt {
     transition: border-color 150ms ease-in-out;
 }
 .repl-block:not(.using-custom-prompt) .repl-prompt-righty {
-    border-color: transparent var(--color-prompt);
+    border-color: transparent var(--color-prompt-background);
     border-style: solid;
     border-width: 0.55em 0px 0.55em 0.55em; /* 50% of  height: for repl-context */
     height: 0px;
@@ -317,8 +315,8 @@ body[kui-theme-style="light"] .repl-prompt {
 .repl-context {
     font-size: 0.6875em;
     font-weight: 500;
-    color: var(--color-text-01);
-    background-color: var(--color-prompt);
+    color: var(--color-prompt-text);
+    background-color: var(--color-prompt-background);
     border-left: 1px solid var(--color-ui-03);
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
@@ -690,7 +688,7 @@ body[kui-theme-style="dark"] .repl-result:not(.result-table-with-custom-entity-c
     margin-right: 1ex;
 }
 .repl-result-prefix, badge:not(.badge-as-image) {
-    font-weight: 400;
+    font-weight: 500;
     transition: all 150ms ease-in-out;
     font-size: 0.825em;
     border-radius: 0.9375em;
@@ -742,7 +740,7 @@ i.clickable:hover, badge.clickable:hover {
 sidecar {
     flex: 0 0 0%;
     min-width: 0;
-    transition: all 300ms ease-in-out;
+    transition: flex 300ms ease-in-out, background-color 150ms ease-in-out, color 150ms ease-in-out, border-color 150ms ease-in-out;
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
@@ -757,7 +755,7 @@ sidecar.visible {
     border-radius: 2px / 4px;
     height: calc(100% - 0.75em);
     margin-top: 0.375em;
-    box-shadow: 0px 0px 1px var(--color-ui-04);
+    box-shadow: 0px 0px 3px var(--color-ui-04);
 }
 body:not(.subwindow) .sidecar-full-screen sidecar.visible:not(.minimized) {
     border-left-color: var(--color-ui-04);
@@ -791,9 +789,6 @@ sidecar .sidecar-bottom-stripe-left-bits, sidecar .sidecar-bottom-stripe-left-bi
     /* button container in sidecar bottom stripe */
     flex: 1;
     display: flex;
-}
-.sidecar-bottom-stripe-mode-bits.sidecar-bottom-stripe-button-container {
-    align-items: center;
 }
 sidecar .sidecar-bottom-stripe-left-bits .sidecar-bottom-stripe-button-container.sidecar-bottom-stripe-back-bits {
     /* back button container in sidecar bottom stripe */
@@ -861,7 +856,7 @@ body.os-win32 sidecar .sidecar-bottom-stripe-close:hover .sidecar-bottom-stripe-
 }
 sidecar .sidecar-bottom-stripe-back-bits, .sidecar-bottom-stripe .fill-container {
     /* back button in sidecar bottom stripe */
-    border-right: 1px dotted hsla(240, 2%, 90%, 0.5);
+    border-right: 1px inset rgba(128,128,128,0.5);
     padding-right: 0.475rem;
     margin-right: 0.475rem;
 }
@@ -960,7 +955,8 @@ sidecar .sidecar-header-icon {
 sidecar .sidecar-header-icon-wrapper {
     display: flex;
     padding: 0 1em;
-    border-right: 1px dotted hsla(240, 2%, 90%, 0.5);
+    border-right: 1px inset rgba(128,128,128,0.5);
+    background-color: rgba(0,0,0,0.075);
     margin-right: 1em;
 }
 sidecar .header-left-bits {
@@ -2367,9 +2363,10 @@ body[kui-theme-style="dark"] [data-balloon][data-balloon-pos='right']:before {
 
 /* sidecar minimize to stripe */
 sidecar.minimized {
-    flex: 0 0 2em;
+    flex: 0 0 calc(0.375rem * 2 + 0.75rem); /* designed to match the ? in the header */
     align-items: stretch;
     opacity: 0.9;
+    font-size: 0.875em;
 }
 sidecar.minimized header.sidecar-header {
     display: none;
@@ -2378,7 +2375,7 @@ sidecar.minimized .header-left-bits {
     overflow: visible;
 }
 sidecar.minimized .sidecar-header-icon-wrapper {
-    width: 2em;
+    width: calc(0.375rem * 2 + 0.75rem); /* match sidecar.minimized flex-basis */
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -2389,7 +2386,7 @@ sidecar.minimized .sidecar-header-icon-wrapper {
 }
 sidecar.minimized .sidecar-header-icon {
     width: 0;
-    height: 2em;
+    height: calc(0.375rem * 2 + 0.75rem); /* match sidecar.minimized flex-basis */
     flex: 1;
     transform-origin: 0% 0%;
     justify-content: flex-start;
