--- a/packages/app/web/css/top-tab-stripe.css
+++ b/packages/app/web/css/top-tab-stripe.css
@@ -126,6 +126,9 @@ body[kui-theme-style="light"] .left-tab-stripe-buttons .left-tab-stripe-button i
 .repl {
     padding-top: 0;
 }
+body.not-electron .repl-input {
+    padding-left: 0.375rem;
+}
 .repl-output {
     padding-top: 0.375rem;
     padding-left: 0.375rem;
