chore: new dark theme
Fixes #1964

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -180,7 +180,7 @@
           <div class='sidecar-bottom-stripe-left-bits'>
             <div class='sidecar-bottom-stripe-back-bits sidecar-bottom-stripe-button-container'>
               <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-back-button'
-                   data-balloon-pos='up-left'>
+                   data-balloon-pos='down-left'>
                 <div class='graphical-icon'><i class='fas fa-arrow-left'></i></div>
                 <div class='sidecar-bottom-stripe-back-inner-bits'></div>
               </div>
@@ -235,29 +235,33 @@
           <div class='sidecar-bottom-stripe-right-bits'>
             <!-- screenshot button -->
             <div class='sidecar-screenshot-button sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize screenshot-button'
-                 data-balloon='Capture Screenshot' data-balloon-length="medium" data-balloon-pos="up-right">
+                 data-balloon='Capture Screenshot' data-balloon-length="medium" data-balloon-pos="down-right">
               <div class='graphical-icon'>
-                <i class='fas fa-camera'></i>
+                <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true"><path d="M29 26H3a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h6.46l1.71-2.55A1 1 0 0 1 12 4h8a1 1 0 0 1 .83.45L22.54 7H29a1 1 0 0 1 1 1v17a1 1 0 0 1-1 1zM4 24h24V9h-6a1 1 0 0 1-.83-.45L19.46 6h-6.92l-1.71 2.55A1 1 0 0 1 10 9H4z"></path><path d="M16 22a6 6 0 1 1 6-6 6 6 0 0 1-6 6zm0-10a4 4 0 1 0 4 4 4 4 0 0 0-4-4z"></path></svg>
               </div>
             </div>
 
             <!-- maximize button -->
             <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-maximize toggle-sidecar-maximization-button'>
-              <span class='maximize-button-label'><div class='graphical-icon' data-balloon='Expand to full width' data-balloon-length="medium" data-balloon-pos="up-right"><i class='far fa-window-maximize'></i></div></span>
-              <span class='unmaximize-button-label'><div class='graphical-icon' data-balloon='Restore split screen' data-balloon-length="medium" data-balloon-pos="up-right"><i class='fas fa-columns'></i></div></span>
+              <span class='maximize-button-label'><div class='graphical-icon' data-balloon='Expand to full width' data-balloon-length="medium" data-balloon-pos="down-right">
+                  <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M10 1v1h3.3L8.5 6.8l.7.7L14 2.7V6h1V1zM7.5 9.2l-.7-.7L2 13.3V10H1v5h5v-1H2.7z"></path></svg>
+              </div></span>
+              <span class='unmaximize-button-label'><div class='graphical-icon' data-balloon='Restore split screen' data-balloon-length="medium" data-balloon-pos="down-right">
+                  <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M3 9v1h2.3L1 14.3l.7.7L6 10.7V13h1V9zm10-2V6h-2.3L15 1.7l-.7-.7L10 5.3V3H9v4z"></path></svg>
+              </div></span>
             </div>
 
             <!-- close button -->
             <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-close toggle-sidecar-button'
-                 data-balloon="Minimize the sidecar" data-balloon-length="long" data-balloon-pos="up-right">
+                 data-balloon="Minimize the sidecar" data-balloon-length="long" data-balloon-pos="down-right">
               <div class='graphical-icon'>
-                <i class='fas fa-angle-double-right'></i>
+                <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"></path></svg>
               </div>
             </div>
 
             <!-- Quit/Done button -->
             <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-quit'
-                 data-balloon='Close this popup' data-balloon-length="medium" data-balloon-pos="up-right">
+                 data-balloon='Close this popup' data-balloon-length="medium" data-balloon-pos="down-right">
               <div class="graphical-icon">
                 <i class="fas fa-sign-out-alt"></i>
               </div>
